# wokhei

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md  cliff.toml  deny.toml  justfile
.cargo/: mutants.toml
.config/: nextest.toml
.githooks/: pre-push
.github/: strfry-ci.conf
.github/workflows/: ci.yml  release.yml  security.yml  sem-review.yml
docs/: d-tag-strategy.md  decentralized-lists.mmd  mermaid-puppeteer.json  protocol.md
mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: src__error.rs_line_113_col_9.diff  src__header.rs_line_23_col_5_001.diff  src__header.rs_line_49_col_8.diff  src__item.rs_line_11_col_5_001.diff  src__item.rs_line_11_col_5_003.diff  src__item.rs_line_120_col_5.diff  src__item.rs_line_120_col_5_001.diff  src__keys.rs_line_102_col_5.diff  src__keys.rs_line_102_col_5_001.diff  src__keys.rs_line_140_col_8.diff  src__keys.rs_line_16_col_5.diff  src__keys.rs_line_36_col_5.diff  src__keys.rs_line_37_col_8.diff  src__main.rs_line_21_col_5.diff  src__main.rs_line_34_col_5.diff  src__main.rs_line_34_col_5_001.diff  src__main.rs_line_34_col_5_002.diff  src__main.rs_line_35_col_20.diff  src__main.rs_line_46_col_5_001.diff  src__main.rs_line_60_col_5.diff  src__main.rs_line_60_col_5_001.diff  src__query.rs_line_29_col_24.diff  src__query.rs_line_32_col_17.diff  src__query.rs_line_39_col_17.diff
mutants.out/diff/: src__error.rs_line_48_col_9.diff  src__error.rs_line_48_col_9_001.diff  src__error.rs_line_66_col_9.diff  src__error.rs_line_66_col_9_001.diff  src__error.rs_line_70_col_9.diff  src__error.rs_line_70_col_9_001.diff  src__header.rs_line_23_col_5_001.diff  src__header.rs_line_46_col_8.diff  src__item.rs_line_11_col_5_002.diff  src__item.rs_line_11_col_5_003.diff  src__item.rs_line_12_col_20.diff  src__item.rs_line_139_col_32.diff  src__item.rs_line_139_col_5.diff  src__item.rs_line_146_col_27.diff  src__keys.rs_line_116_col_25.diff  src__keys.rs_line_116_col_5.diff  src__keys.rs_line_116_col_5_001.diff  src__keys.rs_line_140_col_18.diff  src__keys.rs_line_20_col_5.diff  src__keys.rs_line_53_col_5.diff  src__keys.rs_line_89_col_5.diff  src__main.rs_line_21_col_5.diff  src__main.rs_line_35_col_20.diff  (+8 more)
src/: cli.rs  delete.rs  dtag.rs  error.rs  header.rs  item.rs  keys.rs  main.rs  publish.rs  query.rs  response.rs
tests/: integration.rs
