[package]
name = "wokhei"
version = "0.2.0"
edition = "2021"
rust-version = "1.93.1"
authors = ["matthiasdebernardini"]
license = "MIT"
description = "Agent-first CLI for creating and publishing Decentralized List events on Nostr"
repository = "https://github.com/matthiasdebernardini/wokhei"
homepage = "https://github.com/matthiasdebernardini/wokhei"
readme = "README.md"
keywords = ["nostr", "decentralized", "cli", "agent", "dcosl"]
categories = ["command-line-utilities"]

[dependencies]
nostr-sdk = "0.44"
agcli = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
